# RotorTcpBridge

./: .gitignore  FLRig-Kompatibilität.md  Installer.iss  README.md  RotorTcpBridge.code-workspace  RotorTcpBridge.spec  RotorTcpBridgeX.spec  _inline.js  build.ps1  karten_dark_download.py  karten_download.py  leaflet_download.py  pyinstaller.txt  pyproject.toml  pyrightconfig.json  release.ps1  requirements-dev.txt  requirements.txt  run.py  run_tests.py
KartenLight/: ATTRIBUTION.txt
rotortcpbridge/: __init__.py  angle_utils.py  app_config.py  app_icon.py  backup.py  com0com.py  command_catalog.py  error_popup_text.py  geo_utils.py  global_hotkeys_win.py  hardware_client.py  hardware_worker.py  i18n.py  logutil.py  main.py  net_utils.py  ports.py  pst_notify_logic.py  pst_serial.py  pst_server.py  rotor_backup.py  rotor_controller.py  rotor_controller_async.py  rotor_controller_polling.py  rotor_model.py  rotor_parse_utils.py  rs485_protocol.py  shortcut_actions.py  spid_rot2prog.py  udp_aswatchlist.py  udp_pst_rotator.py  udp_ucxlog.py  verbose_cat_log.py  version.py  webengine_schemes.py
test/: __init__.py  test_align_antenna_switch.py  test_axis_position_raw.py  test_geo_utils_bearing.py  test_net_utils_broadcast.py  test_pending_reply_src_match.py  test_pst_notify_logic.py  test_rotor_parse_utils.py  test_rs485_protocol.py  test_setposcc_state.py  test_udp_pst_send_host.py
tests/: test_angle_utils.py  test_geo_utils_bearing.py  test_net_utils_broadcast.py  test_pst_notify_logic.py  test_rotor_parse_utils.py  test_rs485_protocol.py
tools/: karten_download.py  (+4 more)
(+51 files in other folders)
